Add Makefile for ideal

--- a/ideal_cache/Makefile
+++ b/ideal_cache/Makefile
@@ -14,7 +14,7 @@ SOURCES=$(wildcard src/code/*.cpp)
 SOURCES=$(wildcard $(SOURCEDIR)/*.cpp)
 HEADFILES=$(wildcard $(HEADERDIR)/*.hpp)
 OBJFILES=$(patsubst $(SOURCEDIR)/%.cpp,$(BUILDDIR)/%.o,$(SOURCES))
-EXECUTABLE=$(BUILDDIR)/lfu
+EXECUTABLE=$(BUILDDIR)/ideal
 
 
 all: dir $(EXECUTABLE)
