Add debug mode to Makefiles

--- a/lfu_cache/Makefile
+++ b/lfu_cache/Makefile
@@ -3,7 +3,7 @@
 include ../CXXMakefile
 
 #Compiler flags
-CXXFLAGS=$(CXXFLAGS_WARNINGS) $(CXXFLAGS_FLAGS) $(CXXFLAGS_SYNTAX) $(CXXFLAGS_DEBUG)
+CXXFLAGS=$(CXXFLAGS_WARNINGS) $(CXXFLAGS_SYNTAX) $(CXXFLAGS_DEBUG)
 LDFLAGS=$(CXXFLAGS_LINK)
 
 
@@ -18,6 +18,9 @@ EXECUTABLE=$(BUILDDIR)/lfu
 
 
 all: dir $(EXECUTABLE)
+
+debug: CXXFLAGS+= $(CXXFLAGS_FLAGS)
+debug: all
 
 dir:
 	mkdir $(BUILDDIR)
